# analyser

./: dalali_products.py  main.py  pyproject.toml
files/: db_products.xlsx  latest_prices.xlsx  prods_n_found.xlsx  prods_not_found.xlsx
