[tool.poetry]
name = "analyser"
version = "0.1.0"
description = "Program to analyse and update dalali products values"
authors = ["Franklyne Adede <adedefranklyne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
